--- a/examples/formatting/list/index.html
+++ b/examples/formatting/list/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <p>{{ $t('message.hello', ["hello"]) }}</p>
+      <p>{{ $t('message.hello',{_defaultMessage:'呵呵呵 {0}'} ,["hello"]) }}</p>
     </div>
     <script>
       Vue.use(VueI18n)
@@ -18,9 +18,7 @@
           locale: 'en',
           messages: {
             en: {
-              message: {
-                hello: '{0} world'
-              }
+            
             }
           }
         })
